Improve user, seller registration flow